# Auto-Crypto

./: .env.example  .gitignore  Handover.md  README.md  SETUP_GUIDE.md  guide.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_background.bat  run_platform.bat  start_invisible.vbs  stop_platform.bat
alembic/: env.py
alembic/versions/: 24048a0e2890_add_annotation_to_positions.py  3af27c5eee26_add_risk_columns.py  4e9fc46b3a13_align_schema_to_spec.py  e289ccc9edd8_initial_schema_baseline.py
config/: config.example.yaml  config.yaml
docs/: ops-runbook.md
docs/spec/: AGENT_INSTRUCTIONS.md  AILayer.md  Architecture.md  Backtesting.md  CodingStandards.md  Configuration.md  Dashboard.md  DataPipeline.md  Database.md  FolderStructure.md  HandoverSpecification.md  MLStrategy.md  Milestones.md  Notifications.md  README.md  RiskManagement.md  TaskList.md  TechStack.md  TestingPlan.md  TradingEngine.md  WindowsDeployment.md
scripts/: backfill.py  install_service.ps1  run_backtest.py  run_continuous.py  train_model.py  trigger_killswitch.py  trigger_test_trade.py
tests/: conftest.py
tests/fixtures/: candles_btc_1h.parquet  make_fixtures.py
tests/integration/: test_ai_reporting.py  test_dashboard_api.py  test_live_reconciliation.py  test_mode_switching.py  test_paper_e2e.py
tests/unit/: test_ai_client.py  test_app.py  test_config.py  test_db.py  test_events.py  test_feed.py  test_live_adapter.py  test_logging.py  test_ml_features.py  test_ml_labels.py  test_ml_strategy.py  test_new_strategies.py  test_risk.py  (+4 more)
tradecore/: __main__.py  app.py
(+34 files in other folders)
