[project]
name = "cryptotrader"
version = "0.1.0"
description = "Modular crypto algorithmic trading platform running natively on Windows Server"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4"]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
asyncio_mode = "auto"
